02-ingress-controller/example/nginx-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx-deploy

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-deploy

  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      volumes:
      - name: nginx-conf-vol
        configMap:
          name: nginx-conf

      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80

        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-conf-vol
