02-ingress-controller/example/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service

spec:
  selector:
    app: nginx-deploy

  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

  type: ClusterIP
